# cece

./: .mxproject  CMakeLists.txt  README.md  cece.ioc  cmake_install.cmake
App/: CMakeLists.txt
App/app_main/: app_main.cpp  app_main.hpp
App/gpio/: app_gpio.hpp  gpio.cpp
App/main/: app_main.c
App/main/includes/: app_main.h
App/ps2/: ps2.cpp  ps2.hpp
Core/Inc/: main.h  stm32f4xx_hal_conf.h  tim.h
Core/Src/: freertos.c  gpio.c  main.c  spi.c  tim.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
